--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -11,16 +11,34 @@
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 32rem;
+  width: 100%
 }
 .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 32rem;
+  height: auto;
 }
 
  .carousel-inner img {
   width: 100%;
   }
+
+  @media (max-width: 576px) { 
+    .carousel-item {
+       height: 140px
+    }
+ }
+
+   @media (min-width: 1024px) { 
+    .carousel-item {
+       height: 450px
+    }
+ }
+
+   /* @media (max-width: 1276px) { 
+    .carousel-item {
+       height: 400px
+    }
+ } */
