--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -28,5 +28,8 @@
     justify-content: center;
     height: 80%;
     transform: rotate(-20deg);
+    font-style: normal;
+    font-variant: small-caps;
+    color: #444444;
 }
 
