--- a/styles/menu.css
+++ b/styles/menu.css
@@ -3,6 +3,6 @@
        padding: 10px 0px !important;
        width: 100% !important;
        align-content: center;
-       margin: 0 10px
+       margin: 0px
     }
  }
